2011-08-02 WANG Lu <coolwanglu(a)gmail.com>
	* Fix memory browser

2011-07-08 WANG Lu <coolwanglu(a)gmail.com>
	* Fix manpage
	* Fix process list displaying (Issue 26)

2011-03-14 WANG Lu <coolwanglu(a)gmail.com>
	* Ignore empty input at cheatlist
	* Process list dialog is resizable

2011-01-13 WANG Lu <coolwanglu(a)gmail.com>
	* Run as root
	* Skip when readlink on /proc/pid/exe fails
	* Added a script for building packages for PPA

2011-01-12 WANG Lu <coolwanglu(a)gmail.com>
	* Using pager when showing help messages

2011-01-11 WANG Lu <coolwanglu(a)gmail.com>
	* Check version of scanmem right after GameConqueror starts
	
2010-09-19 WANG Lu <coolwanglu(a)gmail.com>
	* Fixed memory leak
	* Set monospace font to the lists
	* Fixed value parsing for strings

2010-05-22 Wang Lu <coolwanglu(a)gmail.com>
	* Fixed `set' command

2010-05-16 Wang Lu <coolwanglu(a)gmail.com>
	* Fixed build on FreeBSD
	* Bug fixed: freezing when scanning multiple variables

2010-04-28 Wang Lu <coolwanglu(a)gmail.com>
	* Bug fixed: dump_to_file
	[Thanks to Bryan Cain]
	* Manually add a cheat entry
	* Update values in the lists

2010-01-19 WANG Lu <coolwanglu(a)gmail.com>
	* Bug fixed: read /proc/<pid>/mem on 32bit machines
	* Bug fixed: scan for double variables on 32bit machines
	* a little improvement on peekbuf
	* Better communication, replace readline with printf when running as
      backend
	* `scan for address` supported

2010-01-16 WANG Lu <coolwanglu(a)gmail.com>
	* Memory Editor
	* Fix copyright strings (again)
	* new 'dump' command

2010-01-12 WANG Lu <coolwanglu(a)gmail.com>
	* Bugs fixed
 	* Better DEFAULT_LONGDOC
	* Better GUI
	* Better communication between GUI & backend
	* Progress bar in GUI
	* Several other UI improvement

2010-01-10 WANG Lu <coolwanglu(a)gmail.com>
	* STRING supported
	* Fixed a bug relacted to match_flag, now match_flags seems to be
      `dangerous` since I made it a union now.
	* Fixed a memory bug in target_memory_info_array.c
